<package format="2">
  <name>openhrp3_simulator_wo_rtm</name>
  <version>1.0.5</version>
  <description>
    OpenHRP3 simulation for HRP-2 Without OpenRTM
  </description>
  <maintainer email="hpp@laas.fr">hpp@laas.fr</maintainer>
  <author email="hpp@laas.fr">hpp@laas.fr</author>

  <license>LGPL</license>
  <url>http://github.com/olivier-stasse/openhrp3-simulator-wo-rtm</url>

  <export>
  </export>

  <buildtool_depend>catkin</buildtool_depend> 

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>realtime_tools</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
