
#configure_file("${CMAKE_CURRENT_SOURCE_DIR}/start_hrpsys_viewer.in"
#  "${CMAKE_CURRENT_BINARY_DIR}/start_hrpsys_viewer")

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/start_hrpsys_viewer 
  DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}/${PROJECT_NAME}
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
  GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
  )
